deployment/sportgh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ca-sportgh-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sportgh.k8s.edu.codespring.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ca-sportgh-frontend-service
                port:
                  number: 80
    - host: api.sportgh.k8s.edu.codespring.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ca-sportgh-backend-service
                port:
                  number: 80
